<?xml version="1.0" encoding="utf-8"?>

<!-- /*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */-->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster_iv"
            android:layout_width="@dimen/detail_poster_width"
            android:layout_height="@dimen/detail_poster_height"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:contentDescription="@string/description"
            android:scaleType="fitCenter"
            android:src="#afaeae"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/fav_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description"
            android:onClick="onFavButtonClicked"
            android:src="@drawable/ic_untapped"
            app:layout_constraintStart_toEndOf="@id/movie_poster_iv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/image_button_text"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:onClick="onFavButtonClicked"
            android:text="@string/fav_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fav_btn"
            app:layout_constraintTop_toTopOf="@id/fav_btn" />

        <Button
            android:id="@+id/reviews_btn"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:onClick="onReviewsButtonClicked"
            android:text="@string/reviews_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster_iv"
            app:layout_constraintTop_toBottomOf="@id/fav_btn" />

        <Button
            android:id="@+id/trailers_btn"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:onClick="onTrailersClicked"
            android:text="@string/trailer_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster_iv"
            app:layout_constraintTop_toBottomOf="@id/reviews_btn" />

        <TextView
            android:id="@+id/retry_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:gravity="center"
            android:onClick="retryPosterDownload"
            android:text="@string/tap_to_retry"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_iv" />

        <TextView
            android:id="@+id/orig_title_tv"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retry_tv" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orig_title_tv" />

        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date_tv" />

        <TextView
            android:id="@+id/plot_tv"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:paddingBottom="@dimen/margin_16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_tv" />

        <ProgressBar
            android:id="@+id/poster_download_pgbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/movie_poster_iv"
            app:layout_constraintEnd_toEndOf="@id/movie_poster_iv"
            app:layout_constraintStart_toStartOf="@id/movie_poster_iv"
            app:layout_constraintTop_toTopOf="@+id/movie_poster_iv" />

        <TextView
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/review_trailers_tv"
            android:text="@string/reviews_trailers_text"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/plot_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/reviews_trailers_recyclerview"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/reviews_trailers_recyclerview"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_trailers_tv"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>